Updates to docker compose validator

--- a/.planning/phases/40-og-images-blog-post-polish/40-02-PLAN.md
+++ b/.planning/phases/40-og-images-blog-post-polish/40-02-PLAN.md
@@ -191,7 +191,7 @@ Run `npm run build` and confirm:
 - Both links are present in the same aside element
   </verify>
   <done>
-The Compose Validator tool page aside links to both the companion blog post and individual rule documentation. Combined with the inline tool links in the blog post (Task 1), bidirectional cross-linking is complete: blog post links to tool page, and tool page links back to blog post.
+The Compose Validator tool page aside links to both the companion blog post and individual rule documentation. Combined with the inline tool links in the blog post (Task 1), bidirectional cross-linking is complete: blog post links to tool page, and tool page links back to blog post. Manual Lighthouse audit on /tools/compose-validator/ confirms Performance >= 90 and no new WCAG violations introduced by the OG image or blog cross-link changes.
   </done>
 </task>
 
@@ -206,6 +206,7 @@ The Compose Validator tool page aside links to both the companion blog post and 
 6. Tool page aside still links to rule documentation
 7. Blog post appears in sitemap
 8. Related posts computed correctly (tag overlap with dockerfile-best-practices)
+9. Manual Lighthouse audit on /tools/compose-validator/ confirms Performance >= 90 and no new WCAG 2.1 AA violations
 </verification>
 
 <success_criteria>
