fix(47): revise plans based on checker feedback

--- a/.planning/phases/47-seo-documentation-site-integration/47-01-PLAN.md
+++ b/.planning/phases/47-seo-documentation-site-integration/47-01-PLAN.md
@@ -114,11 +114,12 @@ Key mappings (CIS Kubernetes Benchmark v1.8):
 - KA-C008 (hostNetwork) -> 5.2.4 "Minimize the admission of containers wishing to share the host network namespace"
 - KA-C010 (dangerous capabilities) -> 5.2.7 "Minimize the admission of containers with added capabilities"
 - KA-C011 (capabilities not dropped) -> 5.2.7 "Minimize the admission of containers with added capabilities"
-- KA-C012 (Docker socket) -> 5.2.12 "Minimize the admission of HostPath volumes"
+- KA-C012 (writable filesystem / read-only FS not enforced) -> No direct CIS section (omit)
 - KA-C013 (seccomp missing) -> 5.7.2 "Ensure that the seccomp profile is set to docker/default in your Pod definitions"
 - KA-C014 (sensitive host path) -> 5.2.12 "Minimize the admission of HostPath volumes"
-- KA-C015 (service account token) -> 5.1.6 "Ensure that Service Account Tokens are only mounted where necessary"
-- KA-C016 (default SA) -> 5.1.5 "Ensure that default service accounts are not actively used"
+- KA-C015 (Docker socket mount) -> 5.2.12 "Minimize the admission of HostPath volumes"
+- KA-C016 (SA token auto-mount) -> 5.1.6 "Ensure that Service Account Tokens are only mounted where necessary"
+- KA-C017 (default ServiceAccount) -> 5.1.5 "Ensure that default service accounts are not actively used"
 - KA-C018 (secrets in env) -> Information level, no direct CIS section (omit)
 - KA-C019 (default namespace) -> 5.7.1 "Create administrative boundaries between resources using namespaces"
 - KA-C020 (missing securityContext) -> 5.7.3 "Apply Security Context to Your Pods and Containers"
