--- a/.planning/phases/47-seo-documentation-site-integration/47-06-PLAN.md
+++ b/.planning/phases/47-seo-documentation-site-integration/47-06-PLAN.md
@@ -101,6 +101,19 @@ Run `npm run preview` and verify:
 
 6. **LLMs.txt** at http://localhost:4321/llms.txt:
    - Contains "Kubernetes Manifest Analyzer" entry with URL, Rules, Blog fields
+
+7. **QA-01: Lighthouse performance** (automated check):
+   Run `npx lighthouse http://localhost:4321/tools/k8s-analyzer/ --output=json --chrome-flags="--headless" --quiet` and verify Performance, Accessibility, Best Practices, and SEO scores are all 90+. Also spot-check a rule page: `npx lighthouse http://localhost:4321/tools/k8s-analyzer/rules/ka-c001/ --output=json --chrome-flags="--headless" --quiet` -- scores 90+.
+
+8. **QA-02: WCAG 2.1 AA accessibility**:
+   - Tab through the tool page and 2 rule pages using only keyboard -- all interactive elements (links, buttons, code blocks) must be reachable and have visible focus indicators
+   - Verify no Lighthouse accessibility violations flagged (score from step 7 should be 90+)
+   - Check rule page headings follow h1 > h2 > h3 hierarchy (no skipped levels)
+
+9. **QA-03: Responsive layout**:
+   - Open http://localhost:4321/tools/k8s-analyzer/ at mobile viewport (375x667) -- no horizontal scroll, content stacks vertically
+   - Open a rule page at tablet viewport (768x1024) -- layout adjusts, code blocks don't overflow
+   - Open homepage at mobile viewport -- 3-tool card grid collapses to single column
   </how-to-verify>
   <resume-signal>Type "approved" or describe issues</resume-signal>
 </task>
